--- a/styles/game.css
+++ b/styles/game.css
@@ -69,6 +69,7 @@
 
 .tile {
     background-color: yellow;
+    transition: transform 0.2s ease-in-out;
 }
 
 #stats-container, #gameboard, #bonus-container {
