--- a/styles/GameStyles/game.css
+++ b/styles/GameStyles/game.css
@@ -1,3 +1,4 @@
+
 .transparent {
     background-color: transparent !important;
 }
@@ -39,23 +40,26 @@
     top: 29%;
     bottom: 29%;
     z-index: 2;
-    left: 5%;
-    width: 90%;
-    border: 0.4vh solid var(--red);
+    width: 380px;
+    height: 380px;
+    border: 4px solid var(--red);
     border-radius: 1.5rem;
     background-color: var(--red);
 }
 
 .grid {
-    position: relative;
-    overflow: hidden;
     width: 100%;
     height: 100%;
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(4, 1fr);
-    row-gap: 1%;
-    column-gap: 1%;
+    grid-template-columns: repeat(4, 90px);
+    grid-template-rows: repeat(4, 90px);
+    row-gap: 4px;
+    column-gap: 4px;
+}
+
+#tiles-grid {
+    position: relative;
+    overflow: hidden;
 }
 
 .grid-cell, .tile {
@@ -69,11 +73,8 @@
 }
 
 .tile {
-    position: absolute;
-    width: 100%;
-    height: 100%;
     background-color: yellow;
-    transition: top 0.2s ease-in-out, left 0.2 ease-in-out;
+    transition: transform 0.2s ease-in-out;
 }
 
 #stats-container, #gameboard, #bonus-container {
