--- a/styles/GameStyles/game.css
+++ b/styles/GameStyles/game.css
@@ -1,3 +1,8 @@
+:root {
+    --cellSizes: 90px;
+    --gridGaps: 4px;
+}
+
 
 .transparent {
     background-color: transparent !important;
@@ -36,12 +41,14 @@
 }
 
 .gameboard {
+    --gameboardSize: 380px;
+
     position: absolute;
     top: 29%;
     bottom: 29%;
     z-index: 2;
-    width: 380px;
-    height: 380px;
+    width: var(--gameboardSize); 
+    height: var(--gameboardSize);
     border: 4px solid var(--red);
     border-radius: 1.5rem;
     background-color: var(--red);
@@ -73,8 +80,11 @@
 }
 
 .tile {
+    position: absolute;
+    /* z-index: 3; */
+    width: var(--cellSizes);
+    height: var(--cellSizes);
     background-color: yellow;
-    transition: transform 0.2s ease-in-out;
 }
 
 #stats-container, #gameboard, #bonus-container {
