--- a/styles/GameStyles/game.css
+++ b/styles/GameStyles/game.css
@@ -81,7 +81,7 @@
     position: absolute;
     width: var(--cellSizes);
     height: var(--cellSizes);
-    background-color: yellow;
+    background-color: var(--tileBackgroundColor);
     transition: top 0.3s ease-in-out, left 0.3s ease-in-out;
 }
 
