--- a/styles/GameStyles/game.css
+++ b/styles/GameStyles/game.css
@@ -1,34 +1,38 @@
-:root {
-    --gameboardSize: 380px;
-    --cellSizes: 90px;
-    --gridGaps: 4px;
-}
 
-.transparent {
-    background-color: transparent !important;
+main, #bonus-section {
+    justify-content: center;
+    padding: 0% 5%;
 }
 
 #stats-container {
-    justify-content: space-evenly;
     align-items: center;
-    position: absolute;
-    top: 8.5vh;
-    left: 5%;
-    width: 90%;
-    height: 15.7%;
+    justify-content: space-between;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    height: 15.5vh;
+    margin: 17.5% 0%;
     border-radius: 1.5rem;
     color: var(--red);
     background-color: var(--silver);
 }
 
+.stats-desk-container {
+    justify-content: center;
+    height: 85%;
+}
+
 .stats-box {
     justify-content: space-evenly;
     align-items: center;
-    height: 86.6%;
-    width: 46.75%;
+    width: 90%;
     background-color: var(--backgroundColor);
     border-radius: 1.5rem;
     font-size: 2rem;
+}
+
+.transparent {
+    background-color: transparent !important;
 }
 
 .stats-box p {
@@ -40,24 +44,31 @@
     height: auto;
 }
 
+.icon-img {
+    width: var(--cellSizes);
+    height: auto;
+}
+
 .gameboard {
-    position: absolute;
-    top: 29%;
-    bottom: 29%;
-    z-index: 2;
     width: var(--gameboardSize); 
     height: var(--gameboardSize);
     border: var(--gridGaps) solid var(--red);
     border-radius: 1.5rem;
     background-color: var(--red);
+    margin: 0 0 30% 0;
+}
+
+#gameboard-tp {
+    position: absolute;
+    z-index: 2;
 }
 
 .grid {
     width: 100%;
     height: 100%;
     display: grid;
-    grid-template-columns: repeat(4, 90px);
-    grid-template-rows: repeat(4, 90px);
+    grid-template-columns: repeat(4, var(--cellSizes));
+    grid-template-rows: repeat(4, var(--cellSizes));
     row-gap: var(--gridGaps);
     column-gap: var(--gridGaps);
 }
@@ -121,11 +132,8 @@
 #bonus-container {
     justify-content: space-between;
     align-items: center;
-    position: absolute;
-    left: 5%;
-    bottom: 5%;
-    width: 90%;
-    height: 10%;
+    width: 100%;
+    height: 10vh;
     padding: 3.5%;
     border-radius: 5rem;
     background-image: radial-gradient(at 10% 10%, rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0));
@@ -133,8 +141,9 @@
 }
 
 .bonus-btn {
-    width: 17.5%;
-    height: 100%;
+    --roundBtnSizes: 70px;
+    width: var(--roundBtnSizes);
+    height: var(--roundBtnSizes);
     border-radius: 50%;
     border: none;
     background-color: var(--red);
@@ -146,3 +155,4 @@
     width: 100%;
     height: auto;
 }
+
