--- a/styles/GameStyles/game.css
+++ b/styles/GameStyles/game.css
@@ -1,7 +1,24 @@
+body {
+    overflow-x: hidden;
+}
+
+main {
+    @media only screen and (min-width: 850px) {
+        height: 80vh;
+    }
+}
 
 main, #bonus-section {
+    display: flex;
+    flex-direction: column;
     justify-content: center;
     padding: 0% 5%;
+
+    @media only screen and (min-width: 850px) {
+        padding: 0 2.5%;
+        flex-direction: row;
+        justify-content: space-evenly;
+    }
 }
 
 #stats-container {
@@ -20,6 +37,16 @@ main, #bonus-section {
 .stats-desk-container {
     justify-content: center;
     height: 85%;
+
+    @media only screen and (min-width: 850px) {
+        align-items: center;
+        border-radius: 1.5rem;
+        height: 25vh;
+        width: 25%;
+        margin: 17.5% 0%;    
+        color: var(--red);
+        background-color: var(--silver);
+    }
 }
 
 .stats-box {
@@ -29,6 +56,11 @@ main, #bonus-section {
     background-color: var(--backgroundColor);
     border-radius: 1.5rem;
     font-size: 2rem;
+
+    @media only screen and (min-width: 850px) {
+        height: 90%;
+        width: 95%;
+    }
 }
 
 .transparent {
@@ -56,6 +88,11 @@ main, #bonus-section {
     border-radius: 1.5rem;
     background-color: var(--red);
     margin: 0 0 30% 0;
+
+    @media only screen and (min-width: 850px) {
+        margin: 0;
+    }
+
 }
 
 #gameboard-tp {
@@ -129,6 +166,12 @@ main, #bonus-section {
     box-shadow: 3px 38px 40px rgba(0, 0, 0, 0.5);
 }
 
+#bonus-section {
+    @media only screen and (min-width: 850px) {
+        height: 20vh;
+    }
+}
+
 #bonus-container {
     justify-content: space-between;
     align-items: center;
@@ -138,10 +181,14 @@ main, #bonus-section {
     border-radius: 5rem;
     background-image: radial-gradient(at 10% 10%, rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0));
     background-color: var(--silver);
+
+    @media only screen and (min-width: 850px) {
+        width: 60%;
+        height: 14vh;
+    }
 }
 
 .bonus-btn {
-    --roundBtnSizes: 70px;
     width: var(--roundBtnSizes);
     height: var(--roundBtnSizes);
     border-radius: 50%;
@@ -156,3 +203,48 @@ main, #bonus-section {
     height: auto;
 }
 
+.overlay {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    z-index: 9998;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.6);
+}
+
+.message-alert {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 85%;
+    padding: 1.5rem;
+    background-color: white;
+    border: var(--gridGaps) solid red;
+    border-radius: 1.5rem;
+
+    @media only screen and (min-width: 850px) {
+        width: 50%;
+    }
+}
+
+.message-alert h2 {
+    font-size: 2rem;
+}
+
+.message-alert p {
+    text-align: center;
+    font-size: 1.5rem;
+}
+
+#game-over-btn {
+    font-size: 1.8rem;
+    padding: 1rem 3rem;
+    margin: 1rem 0;
+}
