--- a/styles/homepage.css
+++ b/styles/homepage.css
@@ -1,3 +1,13 @@
+main {
+    display: flex;
+    flex-direction: column;
+
+    @media only screen and (min-width: 850px) {
+        flex-direction: row-reverse;
+        width: 100vw;
+    }
+}
+
 #linear-background {
     display: flex;
     justify-content: center;
@@ -6,7 +16,7 @@
     width: 100%;
 }
 
-#linear-background h1 {
+#main-title {
     position: absolute;
     top: 12.5vh;
     margin: 0;
@@ -20,6 +30,7 @@
     bottom: calc(45vh - 80px);
     width: 100%;
     height: auto;
+
 }
 
 #interactive-area {
@@ -43,10 +54,6 @@
     height: 150px;
 }
 
-#wave-1 .shape-fill {
-    fill: #C9C0BB;
-}
-
 #wave-2 {
     position: absolute;
     z-index: 3;
@@ -66,6 +73,20 @@
 
 #wave-2 .shape-fill {
     fill: #FFEBEB;
+}
+
+#wave-3 {
+    transform: rotate(90deg);
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    overflow: hidden;
+    line-height: 0;
+}
+
+#wave-1 .shape-fill {
+    fill: #C9C0BB;
 }
 
 /** For mobile devices **/
