--- a/styles/style.css
+++ b/styles/style.css
@@ -31,6 +31,10 @@ html, body {
     flex-direction: column;
 }
 
+.x-centered {
+    justify-content: center;
+}
+
 .xy-centered {
     justify-content: center;
     align-items: center;
